moving over content

--- a/subway/fire/1.html
+++ b/subway/fire/1.html
@@ -8,18 +8,19 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>What to fill out - File electronically: Information returns (tax slips and tax summaries) - Canada.ca</title>
+         <title>What to fill out - File information returns electronically (tax slips and tax summaries) - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
-         <!-- Meta data-->
-         <!-- Load closure template scripts -->
-         <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_47/cdts/compiled/soyutils.js"></script>
-         <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_47/cdts/compiled/wet-en.js"></script>
+         <!-- Load closure template scripts --> 
+ <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_1_0/cdts/compiled/soyutils.js"></script>
+         <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_1_0/cdts/compiled/wet-en.js"></script>
          <link href="https://test.canada.ca/covid-19-guidance/proto/css/alpha-beta-banner.css" rel="stylesheet">
          <link href="https://www.canada.ca/etc/designs/canada/wet-boew/m%C3%A9li-m%C3%A9lo/2023-10-mount-revelstoke.min.css" rel="stylesheet">
+		 <link href="https://www.canada.ca/etc/designs/canada/wet-boew/css/theme.min.css" rel="stylesheet">
          <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha256-mUZM63G8m73Mcidfrv5E+Y61y7a12O5mW4ezU3bxqW4=" crossorigin="anonymous">
-         <!-- Write closure template -->
+
+<!-- Write closure template --> 
          <script type="text/javascript">
             document.write(wet.builder.refTop({
             }));
@@ -47,7 +48,7 @@
                 title: "Digital services",
                 href: "https://www.canada.ca/en/services/taxes/child-and-family-benefits.html"
               },{
-                title: "File electronically: Information returns (tax slips and tax summaries)",
+                title: "File information returns electronically (tax slips and tax summaries)",
                 href: "index.html"
               }
               ],
@@ -58,7 +59,7 @@
          </script>
          <main role="main" property="mainContentOfPage" class="container">
             <nav class="gc-subway provisional">
-               <h1>File electronically: Information returns (tax slips and tax summaries)</h1>
+               <h1>File information returns electronically (tax slips and tax summaries)</h1>
                <ul>
                   <li><a href="1.html" class="active">What to fill out</a></li>
                   <li><a href="2.html">When to file</a></li>
@@ -70,44 +71,86 @@
             </nav>
             <h1 property="name" id="wb-cont" class="gc-thickline">What to fill out</h1>
            
-		    <p>Select the type of information return to find out who must fill out, what to report and when to issue slips.</p>
-		    <ul>
-<li><a href="#">AGR-1, Statement of Farm-Support Payments</a></li>
-<li><a href="#">NR4, Statement of Amounts Paid or Credited to Non-Residents of Canada</a></li>
-<li><a href="#">T3, Statement of Trusts Income Allocations and Designations</a></li>
-<li><a href="#">T3GR, Group Income Tax and Information Return for RRSP, RRIF, RESP, or RDSP Trusts</a></li>
-<li><a href="#">T3P, Employees’ Pension Plan Income Tax Return</a></li>
-<li><a href="#">T3PRP, T3 Pooled Registered Pension Pan Tax Return</a></li>	
-<li><a href="#">T3RI, Registered Investment Income Tax Return</a></li>	
-<li><a href="#">T4, Statement of Remuneration Paid</a></li>
-<li><a href="#">T4A, Statement of Pension, Retirement, Annuity, and Other Income</a></li>	
-<li><a href="#">T4A-NR, Statement of Fees, Commissions, or Other Amounts Paid to Non-Residents for Services Rendered in Canada</a></li>	
-<li><a href="#">T1204, Government Service Contract Payments</a></li>
-<li><a href="#">T4RIF, Statement of Income From a Registered Retirement Income Fund</a></li>	
-<li><a href="#">T4RSP, Statement of Registered Retirement Savings Plan Income</a></li>	
-<li><a href="#">T5, Statement of Investment Income</a></li>	
-<li><a href="#">T5007, Statement of Benefits</a></li>	
-<li><a href="#">T5008, Statement of Securities Transactions</a></li>	
-<li><a href="#">T5018, Statement of Contract Payments</a></li>	
-<li><a href="#">T4A(OAS), Statement of Old Age Security</a></li>	
-<li><a href="#">T4A(P), Statement of Canada Pension/Quebec Pension Plan Benefits</a></li>	
-<li><a href="#">T4E, Statement of Employment Insurance Benefits</a></li>	
-<li><a href="#">SAFER, Manitoba Shelter Allowance for Elderly Renters (Rent Assist)</a></li>	
-<li><a href="#">RRSP, Contribution Receipt Filing</a></li>	
-<li><a href="#">T215, Exempt from Certification Past Service Pension Adjustment (PSPA)</a></li>	
-<li><a href="#">TFSA, Tax Free Savings Account</a></li>	
-<li><a href="#">T4FHSA, Tax Free First Home Savings Account</a></li>	
-<li><a href="#">T1061, Canadian Amateur Athletic Trust Group Information Return</a></li>	
-<li><a href="#">T5013, FIN Partnership Financial Return</a></li>	
-<li><a href="#">T5013, Partnership Information Return</a></li>	
-<li><a href="#">T661, Scientific Research and Experimental Development (SR&ED) Expenditures Claim</a></li>	
-<li><a href="#">PRPP, Pooled Registered Pension Plan Information Return</a></li>	
-<li><a href="#">RRSP and RRIF, Non-Qualified Investments Information Return</a></li>	
-<li><a href="#">Part XVIII Information Return, International Exchange of Information on Financial Accounts</a></li>	
-<li><a href="#">Part XIX Information Return, International Exchange of Information on Financial Accounts</a></li>		
-<li><a href="#">Worksheet T2000, Calculation of Tax on Agreements to Acquire Shares (Section 207.1(5) of the Income Tax Act)</a></li>	
-<li><a href="#">T2202, Tuition and enrolment certificate</a></li>				    
-</ul>
+	<p>Select the type of information return to find out who must fill  out, what to report and when to issue slips. </p>
+
+
+
+<ul>
+
+  <li><a href="#">AGR-1, Statement of Farm-Support Payments</a></li>
+
+  <li><a href="#">NR4, Statement of Amounts Paid or Credited to Non-Residents of  Canada</a></li>
+
+  <li><a href="#">T3, Statement of Trusts Income Allocations and Designations</a></li>
+
+  <li><a href="#">T3D, Income Tax Return for Deferred Profit Sharing Plan (DPSP)  or Revoked DPSP</a></li>
+
+  <li><a href="#">T3GR, Group Income Tax and Information Return for RRSP, RRIF,  RESP, or RDSP Trusts</a></li>
+
+  <li><a href="#">T3P, Employees&rsquo; Pension Plan Income Tax Return</a></li>
+
+  <li><a href="#">T3PRP, T3 Pooled Registered Pension Pan Tax Return</a></li>
+
+  <li><a href="#">T3RI, Registered Investment Income Tax Return</a><a href="#"> </a></li>
+
+  <li><a href="#">T4, Statement of Remuneration Paid</a></li>
+
+  <li><a href="#">T4A, Statement of Pension, Retirement, Annuity, and Other Income</a></li>
+
+  <li><a href="#">T4A-NR, Statement of Fees, Commissions, or Other Amounts Paid to  Non-Residents for Services Rendered in Canada</a></li>
+
+  <li><a href="#">T1204, Government Service Contract Payments</a></li>
+
+  <li><a href="#">T4RIF, Statement of Income From a Registered Retirement Income  Fund</a></li>
+
+  <li><a href="#">T4RSP, Statement of Registered Retirement Savings Plan Income</a></li>
+
+  <li><a href="#">T5, Statement of Investment Income</a></li>
+
+  <li><a href="#">T5007, Statement of Benefits</a></li>
+
+  <li><a href="#">T5008, Statement of Securities Transactions</a></li>
+
+  <li><a href="#">T5018, Statement of Contract Payments</a></li>
+
+  <li><a href="#">T4A(OAS), Statement of Old Age Security</a></li>
+
+  <li><a href="#">T4A(P), Statement of Canada Pension/Quebec Pension Plan Benefits</a></li>
+
+  <li><a href="#">T4E, Statement of Employment Insurance Benefits</a></li>
+
+  <li><a href="#">SAFER, Manitoba Shelter Allowance for Elderly Renters (Rent  Assist)</a></li>
+
+  <li><a href="#">RRSP, Contribution Receipt Filing</a></li>
+
+  <li><a href="#">T215, Exempt from Certification Past Service Pension Adjustment  (PSPA)</a></li>
+
+  <li><a href="#">TFSA, Tax Free Savings Account</a></li>
+
+  <li><a href="#">T4FHSA, Tax Free First Home Savings Account</a></li>
+
+  <li><a href="#">T1061, Canadian Amateur Athletic Trust Group Information Return</a></li>
+
+  <li><a href="#">T5013, FIN Partnership Financial Return</a></li>
+
+  <li><a href="#">T5013, Partnership Information Return</a></li>
+
+  <li><a href="#">T661, Scientific Research and Experimental Development  (SR&amp;ED) Expenditures Claim</a></li>
+
+  <li><a href="#">PRPP, Pooled Registered Pension Plan Information Return</a></li>
+
+  <li><a href="#">RRSP and RRIF, Non-Qualified Investments Information Return</a></li>
+
+  <li><a href="#">Part XVIII Information Return, International Exchange of  Information on Financial Accounts</a></li>
+
+  <li><a href="#">Part XIX Information Return, International Exchange of  Information on Financial Accounts</a></li>
+
+  <li><a href="#">Worksheet T2000, Calculation of Tax on Agreements to Acquire  Shares (Section 207.1(5) of the Income Tax Act)</a></li>
+
+  <li><a href="#">T2202, Tuition and enrolment certificate</a></li>
+
+</ul>			    
+
             <nav class="gc-subway-pagination">
                <h2 class="wb-inv">Document navigation</h2>
                <ul class="pager">
