--- a/subway/fire/2.html
+++ b/subway/fire/2.html
@@ -8,18 +8,19 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>When to file - File electronically: Information returns (tax slips and tax summaries) - Canada.ca</title>
+         <title>When to file - File information returns electronically (tax slips and tax summaries) - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
-         <!-- Meta data-->
-         <!-- Load closure template scripts -->
-         <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_47/cdts/compiled/soyutils.js"></script>
-         <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_47/cdts/compiled/wet-en.js"></script>
+         <!-- Load closure template scripts --> 
+ <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_1_0/cdts/compiled/soyutils.js"></script>
+         <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_1_0/cdts/compiled/wet-en.js"></script>
          <link href="https://test.canada.ca/covid-19-guidance/proto/css/alpha-beta-banner.css" rel="stylesheet">
          <link href="https://www.canada.ca/etc/designs/canada/wet-boew/m%C3%A9li-m%C3%A9lo/2023-10-mount-revelstoke.min.css" rel="stylesheet">
+		 <link href="https://www.canada.ca/etc/designs/canada/wet-boew/css/theme.min.css" rel="stylesheet">
          <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha256-mUZM63G8m73Mcidfrv5E+Y61y7a12O5mW4ezU3bxqW4=" crossorigin="anonymous">
-         <!-- Write closure template -->
+
+<!-- Write closure template --> 
          <script type="text/javascript">
             document.write(wet.builder.refTop({
             }));
@@ -47,7 +48,7 @@
                 title: "Digital services",
                 href: "https://www.canada.ca/en/revenue-agency/services/e-services.html"
               },{
-                title: "File electronically: Information returns (tax slips and tax summaries)",
+                title: "File information returns electronically (tax slips and tax summaries)",
                 href: "index.html"
               }
               ],
@@ -58,7 +59,7 @@
          </script>
          <main role="main" property="mainContentOfPage" class="container">
             <nav class="gc-subway provisional">
-               <h1>File electronically: Information returns (tax slips and tax summaries)</h1>
+               <h1>File information returns electronically (tax slips and tax summaries)</h1>
                <ul>
                   <li><a href="1.html">What to fill out</a></li>
                   <li><a href="2.html" class="active">When to file</a></li>
@@ -72,163 +73,98 @@
             <p>Page content. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
             <h2 class="h3">On this page</h2>
             <ul>
-               <li><a href="#h-1">Determine the filing due date</a>
-	       <ul>
-		         <li><a href="#h-1-1">Based on information return type</a></li>
-		         <li><a href="#h-1-2">Based on a special situation</a></li>
-	       </ul>
-	       </li>
-               <li><a href="#h-2">When is an information return considered on time</a></li>
-               <li><a href="#h-3">What happens if you file late or you do not file</a></li>
+               <li><a href="#h-1">Determine the filing due date</a> </li>
+               <li><a href="#h-2">What  if you file your information return late</a></li>
+               <li><a href="#h-3">Will  you be penalized if you do not file electronically</a></li>
              
             </ul>
  
 <h2 id="h-1">Determine  the filing due date</h2>
-<h3 id="h-1-1">Based  on information return type</h3>
-<table >
+
+<p><del>To determine the filing due date,</del><span class="bg-danger">The filing due date is</span> based on information  return type.</p>
+
+<p><del> please</del> Refer to the guides listed in the <a href="1.html">What to fill out</a> section. </p>
+
+<h2 id="h-2">What  if you file your information return late</h2>
+
+<p>If you file your information return past  the due date you may be charged a penalty. <del>To learn more, see </del></p>
+<p><span class="bg-danger">Refer to: <a href=https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/penalties-interest-other-consequences/payroll-penalties-interest.html#late_filinf_info_return>Late-filing  penalties for information returns.</a></p>
+
+<h2 id="h-3">Will  you be penalized if you do not file electronically</h2>
+
+<p>As of January 2024, if you file more than  6 information returns (slips) for a calendar year, you are <strong>required</strong> to file electronically by<span class="bg-danger">:</span>
+<ul class="bg-danger">
+<li> <a href=https://apps.cra-arc.gc.ca/ebci/leb0/upload/pub/disclaimer.action?request_locale=en>Internet  file transfer</a></li>
+<li> <a href=https://apps.cra-arc.gc.ca/ebci/leb0/webform/pub/disclaimer.action?request_locale=en>Web  Forms</a></li>
+</ul>
+<p> You may have to pay a penalty as  determined in the table below if you file using the wrong method.</p>
+<p><strong>Each slip is an information  return</strong>, and the penalty the CRA assesses is  based on the number of information returns filed in an incorrect format. The  penalty is calculated per type of information return.</p>
+
+
+
+
+<table class="table">
+
+  <caption>Penalty by number of information returns (slips)</caption>
+
+
   <tr>
-    <td>T4, T4A, T4A(OAS),    T4A(P), T4A-NR, T4E, T4RSP, T4RIF, T5, T5007, T5008, AGR-1, TFSA, T4FHSA,    T2202</td>
-    <td><p>The filing due date    is the <strong>last day    of February</strong> after the preceding calendar year </p></td>
+
+    <th scope="header">Number of information returns (slips)</th>
+
+   <th scope="header">Penalty</th>
+
   </tr>
+
   <tr>
-    <td>T3, T1061, T2000,    T3D, T3GR, T3P, T3PRP, T3RI</td>
-    <td>90 days</strong> after    the end of the trust's tax year </p></td>
+
+    <td>6    to 50</td>
+
+    <td><p>$125</p></td>
+
   </tr>
+
   <tr>
-    <td>T1204</td>
-    <td>March 31</strong> after the    preceding calendar year </p></td>
+
+    <td>51    to 250</td>
+
+    <td><p>$250</p></td>
+
   </tr>
+
   <tr>
-    <td>T5013</td>
-    <td><p>The due date for filing an annual return (including distributing the    T5013 slips) depends on the type of partners, including end members of a    tiered partnership.</p>
-      <ul >
-        <li><strong>March         31</strong> after the calendar year in which the fiscal period of the partnership         ended if, throughout the fiscal period:</li>
-        <ul>
-          <li>all partners are individuals, including end          members of tiered partnership, and investment clubs that file on the          modified-partnership basis. We consider a trust to be an individual</li>
-        </ul>
-        <li><strong>5         months</strong> after the end of the partnership's fiscal         period if, throughout the fiscal period:</li>
-        <ul>
-          <li>all partners are corporations, including end          members of a tiered partnership</li>
-        </ul>
-        <li>In         all other cases, the earlier of:</li>
-        <ul>
-          <li><strong>March 31</strong> after the calendar year in          which the fiscal period of the partnership ended</li>
-          <li>the day that is <strong>5 months</strong> after the end          of the partnership's fiscal period </li>
-        </ul>
-      </ul></td>
-  </tr>
-  <tr>
-    <td>T5018</td>
-    <td>6 months</strong> after the end    of the reporting period (calendar year or fiscal period) chosen by the payer </p></td>
-  </tr>
-  <tr>
-    <td>NR4</td>
-    <td>March 31</strong> after the    preceding calendar year or <strong>90 days</strong> after the end    of the trust or estate tax year </p></td>
-  </tr>
-  <tr>
-    <td>RRSP Contribution Information Return, Pooled Registered Pension Plan    Information Return</td>
-    <td><p>File by <strong>May 1</strong> of the year in which the contribution year ends.    The contribution year is the period beginning on the 61st day of one year and    ending on the 60th day of the following year.</p></td>
-  </tr>
-  <tr>
-    <td>Part XVIII, Part XIX</td>
-    <td><p>File by <strong>May</strong> <strong>1</strong> following the calendar year    to which the information return applies.</p></td>
-  </tr>
-</table>
-<p> </p>
-<h2  id="h-2">When  is an information return considered on time</h2>
-<p>The CRA considers the information return to be filed on time if it is  received on or before the due date. 
-  When the due date falls on a Saturday, a Sunday, or a <a href="https://www.canada.ca/en/revenue-agency/services/tax/public-holidays.html">public holiday</a> recognized by the  CRA, your information return is considered on time if the CRA receives it or it  is postmarked on or before the next business day. </p>
-<h2  id="h-3">What  happens if you file late or you do not file</h2>
-<h3>Legislated  penalties</h3>
-<p>You may be charged a penalty if you file  your information return late. To learn more,  see <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/penalties-interest-other-consequences/payroll-penalties-interest.html#late_filinf_info_return">late-filing penalties for information returns.</a> 
-  <strong>Each slip is an information  return</strong>, and the penalty the CRA assesses is  based on the number of information returns you filed late. The penalty is $100  or the amount calculated according to the chart below, whichever is more:</p>
-<table>
-  <tr>
-    <td>
-      <strong>Legislated late-filing     penalties</strong></td>
-  </tr>
-  <tr>
-    <td>Number of information returns (slips)     filed late</td>
-    <td>Penalty per day (up to 100 days)</td>
-    <td>Maximum penalty</td>
-  </tr>
-  <tr>
-    <td><p>1 to 50</p></td>
-    <td><p>$10</p></td>
-    <td><p>$1,000</p></td>
-  </tr>
-  <tr>
-    <td><p>51 to 500</p></td>
-    <td><p>$15</p></td>
-    <td><p>$1,500</p></td>
-  </tr>
-  <tr>
-    <td><p>501 to 2,500</p></td>
-    <td><p>$25</p></td>
-    <td><p>$2,500</p></td>
-  </tr>
-  <tr>
-    <td><p>2,501 to 10,000</p></td>
-    <td><p>$50</p></td>
-    <td><p>$5,000</p></td>
-  </tr>
-  <tr>
-    <td><p>10,001 or more</p></td>
-    <td><p>$75</p></td>
-    <td><p>$7,500</p></td>
-  </tr>
-</table>
-<h3>Relieving administrative  policy </h3>
-<p>For specific information returns, the  administrative policy reduces the penalty that you may be charged to make sure  it is fair and reasonable for small businesses. You may be charged a reduced  penalty if you file your information return late and it is part of the list of  specific information returns that applies to the administrative policy.
-  <strong>Each slip is an information  return</strong>, and the penalty the CRA assesses is  based on the number of information returns you filed late. The penalty is $100  or the amount calculated according to the chart below, whichever is more:</p>
-<table>
-  <tr>
-    <td>
-      <strong>Penalties     under the relieving administrative policy</strong></td>
-  </tr>
-  <tr>
-    <td>Number of information returns (slips)     filed late</td>
-    <td>Penalty per day (up to 100 days)</td>
-    <td>Maximum penalty</td>
-  </tr>
-  <tr>
-    <td><p>1 to 5</p></td>
-    <td><p>Penalty not based on number of days</p></td>
-    <td><p>$100 flat penalty</p></td>
-  </tr>
-  <tr>
-    <td><p>6 to 10</p></td>
-    <td><p>$5</p></td>
+
+    <td>251    to 500</td>
+
     <td><p>$500</p></td>
+
   </tr>
+
   <tr>
-    <td><p>11 to 50</p></td>
-    <td><p>$10</p></td>
-    <td><p>$1,000</p></td>
-  </tr>
-  <tr>
-    <td><p>51 to 500</p></td>
-    <td><p>$15</p></td>
+
+    <td>501    to 2,500</td>
+
     <td><p>$1,500</p></td>
+
   </tr>
+
   <tr>
-    <td><p>501 to 2,500</p></td>
-    <td><p>$25</p></td>
+
+    <td>2,501    or more</td>
+
     <td><p>$2,500</p></td>
+
   </tr>
-  <tr>
-    <td><p>2,501 to 10,000</p></td>
-    <td><p>$50</p></td>
-    <td><p>$5,000</p></td>
-  </tr>
-  <tr>
-    <td><p>10,001 or more</p></td>
-    <td><p>$75</p></td>
-    <td><p>$7,500</p></td>
-  </tr>
+
 </table>
-<h3>Additional  legislative penalty for conspiring in order to avoid reporting contract  payments (T5018 information returns) </h3>
-<p>Any contractor that plans with  subcontractors to avoid tax by concealing underground activity could face  criminal prosecution, with fines and penalties of up to 200% of the tax they  tried to avoid.</p>
+<p class="bg-danger">For example:</p>
+
+<ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg bg-danger">
+<li><span class="mrgn-tp-0 text-muted h5">51 T5 slips filed on paper (fine is $250)</span> </li>
+<li class="brdr-bttm"><span class="fas fa-plus fa-li"><span class="wb-inv">plus</span></span> <span class="text-muted h5">51 T4 slips filed on paper (fine is $250)</span></li>
+
+<li><span class="fas fa-equals fa-li"><span class="wb-inv">equals</span></span><span class="text-muted h5">$500 penalty</span> </li>
+</ul>
             <nav class="gc-subway-pagination">
                <h2 class="wb-inv">Document navigation</h2>
                <ul class="pager">
