--- a/subway/fire/5.html
+++ b/subway/fire/5.html
@@ -8,18 +8,19 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Make corrections after filing - File electronically: Information returns (tax slips and tax summaries) - Canada.ca</title>
+         <title>Make corrections after filing - File information returns electronically (tax slips and tax summaries) - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
-         <!-- Meta data-->
-         <!-- Load closure template scripts -->
-         <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_47/cdts/compiled/soyutils.js"></script>
-         <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_47/cdts/compiled/wet-en.js"></script>
+        <!-- Load closure template scripts --> 
+ <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_1_0/cdts/compiled/soyutils.js"></script>
+         <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_1_0/cdts/compiled/wet-en.js"></script>
          <link href="https://test.canada.ca/covid-19-guidance/proto/css/alpha-beta-banner.css" rel="stylesheet">
          <link href="https://www.canada.ca/etc/designs/canada/wet-boew/m%C3%A9li-m%C3%A9lo/2023-10-mount-revelstoke.min.css" rel="stylesheet">
+		 <link href="https://www.canada.ca/etc/designs/canada/wet-boew/css/theme.min.css" rel="stylesheet">
          <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha256-mUZM63G8m73Mcidfrv5E+Y61y7a12O5mW4ezU3bxqW4=" crossorigin="anonymous">
-         <!-- Write closure template -->
+
+<!-- Write closure template --> 
          <script type="text/javascript">
             document.write(wet.builder.refTop({
             }));
@@ -47,7 +48,7 @@
                 title: "Digital services",
                 href: "https://www.canada.ca/en/services/taxes/child-and-family-benefits.html"
               },{
-                title: "File electronically: Information returns (tax slips and tax summaries)",
+                title: "File information returns electronically (tax slips and tax summaries)",
                 href: "index.html"
               }
               ],
@@ -58,7 +59,7 @@
          </script>
          <main role="main" property="mainContentOfPage" class="container">
             <nav class="gc-subway provisional">
-               <h1>File electronically: Information returns (tax slips and tax summaries)</h1>
+               <h1>File information returns electronically (tax slips and tax summaries)</h1>
                <ul>
                   <li><a href="1.html">What to fill out</a></li>
                   <li><a href="2.html">When to file</a></li>
