--- a/subway/fire/4.html
+++ b/subway/fire/4.html
@@ -8,18 +8,19 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>How to file - File electronically: Information returns (tax slips and tax summaries) - Canada.ca</title>
+         <title>How to file - File information returns electronically (tax slips and tax summaries) - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
-         <!-- Meta data-->
-         <!-- Load closure template scripts -->
-         <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_47/cdts/compiled/soyutils.js"></script>
-         <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_47/cdts/compiled/wet-en.js"></script>
+        <!-- Load closure template scripts --> 
+ <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_1_0/cdts/compiled/soyutils.js"></script>
+         <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_1_0/cdts/compiled/wet-en.js"></script>
          <link href="https://test.canada.ca/covid-19-guidance/proto/css/alpha-beta-banner.css" rel="stylesheet">
          <link href="https://www.canada.ca/etc/designs/canada/wet-boew/m%C3%A9li-m%C3%A9lo/2023-10-mount-revelstoke.min.css" rel="stylesheet">
+		 <link href="https://www.canada.ca/etc/designs/canada/wet-boew/css/theme.min.css" rel="stylesheet">
          <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha256-mUZM63G8m73Mcidfrv5E+Y61y7a12O5mW4ezU3bxqW4=" crossorigin="anonymous">
-         <!-- Write closure template -->
+
+<!-- Write closure template --> 
          <script type="text/javascript">
             document.write(wet.builder.refTop({
             }));
@@ -47,7 +48,7 @@
                 title: "Digital services",
                 href: "https://www.canada.ca/en/services/taxes/child-and-family-benefits.html"
               },{
-                title: "File electronically: Information returns (tax slips and tax summaries)",
+                title: "File information returns electronically (tax slips and tax summaries)",
                 href: "index.html"
               }
               ],
@@ -58,7 +59,7 @@
          </script>
          <main role="main" property="mainContentOfPage" class="container">
             <nav class="gc-subway provisional">
-               <h1>File electronically: Information returns (tax slips and tax summaries)</h1>
+               <h1>File information returns electronically (tax slips and tax summaries)</h1>
                <ul>
                   <li><a href="1.html">What to fill out</a></li>
                   <li><a href="2.html">When to file</a></li>
@@ -69,71 +70,79 @@
                </ul>
             </nav>
             <h1 property="name" id="wb-cont" class="gc-thickline">How to file</h1>
-            
+            <p>Internet filing is available&nbsp;until <strong><span class="far fa-calendar-alt"></span> December 22, 2023</strong>.</p>
+				<p>Our Internet filing applications are  convenient, free and secure.</p>
+				<h2 class="bg-danger">Steps</h2>
 			<ol class="lst-stps ld-zr">
-			<li><h2>Have your completed XML files</h2>
-			<p>(something here to talk about having the XML files on hand)</p></li>
-			<li><h2>Get your sign-in information ready</h2>
+			<li><h3>Have your completed XML files</h3>
+			<p>Have your documentation ready in order to  your information return to CRA.</p></li>
+			<li><h3>Get your sign-in information ready</h3>
 <p>You will need your:</p>
 <ul class="fa-ul">
-<li><span class="fas fa-check text-success fa-li"></span> Account number (Trust Number, Non-Resident  Number, 15 characters RP or RZ Business Number)
-<ul><li>If you have more than one payroll  account, you have to file a separate return for each account.</li></ul></li>
+<li><span class="fas fa-check text-success fa-li"></span> Account number (Trust Number, Non-Resident Number,  15 characters RP or RZ Business Number)
+<ul><li>If you have more than one  payroll account, you have to file a separate return for each account</li></ul></li>
 <li><span class="fas fa-check text-success fa-li"></span>  Web access code (WAC)
 <details><summary>What is a Web access code (WAC)</summary>
 <p>A Web access code is a personalized code  that is associated with your account number (RP, RZ, Trust or Non-Resident).  Your Web access code contains two letters and four numbers. It is case  sensitive.</p>
 </details>
 <details><summary>Where you find your Web access  code (WAC)</summary>
 <p>If you do not remember your code or you  need a new one, you can:</p>
-<ul>
-  <li>use our <a href="https://apps.cra-arc.gc.ca/ebci/leb0/wacretrieve/pub/disclaimer.action?request_locale=en">Web access code online service<br>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+    <li class="cnjnctn-col">Use our <a href="https://apps.cra-arc.gc.ca/ebci/leb0/wacretrieve/pub/disclaimer.action?request_locale=en">Web access code online service
   </a></li>
-  <li>call business enquiries at <strong>1-800-959-5525</strong></li>
+    <li class="cnjnctn-col">Call business enquiries at <strong>1-800-959-5525</strong></li>
 </ul>
+
 </details></li>
 </ul>
 
-<h3>If you have a balance due</h3>
-<p>When you <a href="https://www.canada.ca/en/revenue-agency/services/payments-cra.html">make  a payment to the Canada Revenue Agency</a>, do  not resubmit your return.</p>
 </li>
 <li>
-<h2>Determine your filing method</h2>
+<h3>Determine your filing method</h3>
 <p>Where possible, you should file returns  electronically to avoid the delays that may occur in processing paper returns.<br>
 
   
   <p>Options:</p>
   <dl class="dl-horizontal">
-  <dt><span class="fas fa-check text-success"></span> Web Forms</dt><dd>For up to 100 slips
+  <dt><span class="fas fa-check text-success"></span> <a href=https://apps.cra-arc.gc.ca/ebci/leb0/webform/pub/disclaimer.action?request_locale=en>Web  Forms</a></dt><dd>For up to 100 slips
 <details class="mrgn-bttm-md"><summary>Benefits to using Web Forms</summary>
- 
  <ul>
+
   <li>Completely <strong>free</strong></li>
-  <li>You  can file <strong>up to 100 slips </strong>(original, amended, or cancelled)  from our website. If you want to file additional slips, file them as original  slips</li>
-  <li>Create  an electronic information return containing slips and a summary, which can be  saved and imported at a later date</li>
-  <li>Summary  totals are calculated for you</li>
-  <li>Allows  you to print your slips and your summary</li>
-  <li>The  application validates data in real time</li>
+
+  <li>You  can file original, amended, or cancelled slips directly from the CRA website.  If you want to file additional slips, file them as original slips</li>
+
+  <li>Create  an electronic information return as an encrypted .xml file, containing slips  and summary, which can be saved and imported at a later date</li>
+
+  <li>Summary  totals are calculated for you </li>
+
+  <li>Allow  you to print slips  for recipients</li>
+
+  <li>The  application validates data in real time, with prompts to correct errors before  filing your slips</li>
+
   <li>Send  encrypted returns over the Internet</li>
+
 </ul>
 </details>
 </dd>
-  <dt><span class="fas fa-check text-success"></span> Internet file transfer</dt><dd><p>For you to use payroll, commercial, or in-house developed software, to submit an XML file of up to 150 MB over the Internet</p>
+  <dt><span class="fas fa-check text-success"></span> Internet file transfer</dt><dd>If you use payroll, commercial, or  in-house developed software, to submit an XML file of up to 150 MB over the  Internet 
   </dd>
 
 
-  <dt><span class="fas fa-times text-danger"></span> CDs, DVDs, USB keys</dt><dd>We   <strong>don't</strong> accept</dd>
+  <dt><span class="fas fa-times text-danger"></span> CDs, DVDs, USB keys</dt><dd> We <strong>do not</strong> accept returns filed on CDs, DVDs, USB keys</dd>
 
-  
+ 
   
   </dl>
-<p>Make sure you can also access your:</p>
+<p>To file your information returns  electronically, you can also access your:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
     <li class="cnjnctn-col">
    <a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/business-account.html">My  Business Account</a> <span class="wb-inv">: Option 1</span>
-      <p>Is a secure, password protected portal, that allows you to file information returns electronically through Internet file transfer and Web forms </p>
+      <p>Is    a secure, password protected portal, that allows you to file information    returns electronically through Internet file transfer and Web forms</p>
     </li>
     <li class="cnjnctn-col">
   <a href="https://www.canada.ca/en/revenue-agency/services/e-services/represent-a-client.html">Represent  a Client</a> <span class="wb-inv">: Option 2</span>
-      <p>is a secure service to access tax information and file information returns electronically on behalf of individuals and businesses, including your employer</p>
+      <p>Is    a secure service to access tax information and file information returns    electronically on behalf of individuals and businesses, including your    employer</p>
     </li>
 </ul>
  
