--- a/subway/fire/2.html
+++ b/subway/fire/2.html
@@ -88,83 +88,9 @@
 <h2 id="h-2">What  if you file your information return late</h2>
 
 <p>If you file your information return past  the due date you may be charged a penalty. <del>To learn more, see </del></p>
-<p><span class="bg-danger">Refer to: <a href=https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/penalties-interest-other-consequences/payroll-penalties-interest.html#late_filinf_info_return>Late-filing  penalties for information returns.</a></p>
-
-<h2 id="h-3">Will  you be penalized if you do not file electronically</h2>
-
-<p>As of January 2024, if you file more than  6 information returns (slips) for a calendar year, you are <strong>required</strong> to file electronically by<span class="bg-danger">:</span>
-<ul class="bg-danger">
-<li> <a href=https://apps.cra-arc.gc.ca/ebci/leb0/upload/pub/disclaimer.action?request_locale=en>Internet  file transfer</a></li>
-<li> <a href=https://apps.cra-arc.gc.ca/ebci/leb0/webform/pub/disclaimer.action?request_locale=en>Web  Forms</a></li>
-</ul>
-<p> You may have to pay a penalty as  determined in the table below if you file using the wrong method.</p>
-<p><strong>Each slip is an information  return</strong>, and the penalty the CRA assesses is  based on the number of information returns filed in an incorrect format. The  penalty is calculated per type of information return.</p>
+<p><span class="bg-danger">Refer to: <a href=https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/penalties-interest-other-consequences/payroll-penalties-interest.html#late_filinf_info_return>Late-filing  penalties for information returns</a></p>
 
 
-
-
-<table class="table">
-
-  <caption>Penalty by number of information returns (slips)</caption>
-
-
-  <tr>
-
-    <th scope="header">Number of information returns (slips)</th>
-
-   <th scope="header">Penalty</th>
-
-  </tr>
-
-  <tr>
-
-    <td>6    to 50</td>
-
-    <td><p>$125</p></td>
-
-  </tr>
-
-  <tr>
-
-    <td>51    to 250</td>
-
-    <td><p>$250</p></td>
-
-  </tr>
-
-  <tr>
-
-    <td>251    to 500</td>
-
-    <td><p>$500</p></td>
-
-  </tr>
-
-  <tr>
-
-    <td>501    to 2,500</td>
-
-    <td><p>$1,500</p></td>
-
-  </tr>
-
-  <tr>
-
-    <td>2,501    or more</td>
-
-    <td><p>$2,500</p></td>
-
-  </tr>
-
-</table>
-<p class="bg-danger">For example:</p>
-
-<ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg bg-danger">
-<li><span class="mrgn-tp-0 text-muted h5">51 T5 slips filed on paper (fine is $250)</span> </li>
-<li class="brdr-bttm"><span class="fas fa-plus fa-li"><span class="wb-inv">plus</span></span> <span class="text-muted h5">51 T4 slips filed on paper (fine is $250)</span></li>
-
-<li><span class="fas fa-equals fa-li"><span class="wb-inv">equals</span></span><span class="text-muted h5">$500 penalty</span> </li>
-</ul>
             <nav class="gc-subway-pagination">
                <h2 class="wb-inv">Document navigation</h2>
                <ul class="pager">
