--- a/subway/fire/3.html
+++ b/subway/fire/3.html
@@ -70,18 +70,99 @@
                </ul>
             </nav>
             <h1 property="name" id="wb-cont" class="gc-thickline">Get ready to file</h1>
-			<div class="wb-eqht row">
-          	<div class="col-md-6">
-		<h2 class="h3"><a href="3a.html">XML    specifications</a></h3>
-		<p> Find XML specifications to    file electronically, if you need more details about the XML requirement for    each box</p>
-	</div>
-	<div class="col-md-6">
-		<h2 class="h3"><a href="3b.html">XML schema</a></h3>
-		<p> Find the correct XML schema, if you want to create/validate    your .xml file </p>
-	</div>
-	
-</div>
+			<h2 class="bg-danger">Steps</h2>
+			<ol class="lst-stps ld-zr">
+			<li><h3><del>Will  you be penalized if you do not file electronically</del> <span class="bg-danger">Determine if you must file electronically</span></h3>
 
+<p>As of January 2024, if you file more than  6 information returns (slips) for a calendar year, you are <strong>required</strong> to file electronically by<span class="bg-danger">:</span>
+<ul class="bg-danger">
+<li> <a href=https://apps.cra-arc.gc.ca/ebci/leb0/upload/pub/disclaimer.action?request_locale=en>Internet  file transfer</a></li>
+<li> <a href=https://apps.cra-arc.gc.ca/ebci/leb0/webform/pub/disclaimer.action?request_locale=en>Web  Forms</a></li>
+</ul>
+<p> You may have to pay a penalty as  determined in the table below if you file using the wrong method.</p>
+<p><strong>Each slip is an information  return</strong>, and the penalty the CRA assesses is  based on the number of information returns filed in an incorrect format. The  penalty is calculated per type of information return.</p>
+
+
+
+
+<table class="table">
+
+  <caption>Penalty by number of information returns (slips)</caption>
+
+
+  <tr>
+
+    <th scope="header">Number of information returns (slips)</th>
+
+   <th scope="header">Penalty</th>
+
+  </tr>
+
+  <tr>
+
+    <td>6    to 50</td>
+
+    <td><p>$125</p></td>
+
+  </tr>
+
+  <tr>
+
+    <td>51    to 250</td>
+
+    <td><p>$250</p></td>
+
+  </tr>
+
+  <tr>
+
+    <td>251    to 500</td>
+
+    <td><p>$500</p></td>
+
+  </tr>
+
+  <tr>
+
+    <td>501    to 2,500</td>
+
+    <td><p>$1,500</p></td>
+
+  </tr>
+
+  <tr>
+
+    <td>2,501    or more</td>
+
+    <td><p>$2,500</p></td>
+
+  </tr>
+
+</table>
+<p class="bg-danger">For example:</p>
+
+<ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg bg-danger">
+<li><span class="mrgn-tp-0 text-muted h5">51 T5 slips filed on paper (fine is $250)</span> </li>
+<li class="brdr-bttm"><span class="fas fa-plus fa-li"><span class="wb-inv">plus</span></span> <span class="text-muted h5">51 T4 slips filed on paper (fine is $250)</span></li>
+
+<li><span class="fas fa-equals fa-li"><span class="wb-inv">equals</span></span><span class="text-muted h5">$500 penalty</span> </li>
+</ul>
+</li>
+<li><h3 class="bg-alert">Determine your electronic filing method</h3>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-xs">
+    <li class="cnjnctn-col">
+    <h4 class="mrgn-tp-sm text-muted"><a href="3a.html">XML    specifications</a><span class="wb-inv">: Option 1</span></h4>
+    <p> Find XML specifications to    file electronically, if you need more details about the XML requirement for    each box</p>
+    </li>
+    <li class="cnjnctn-col">
+    <h4 class="mrgn-tp-sm text-muted"><a href="3b.html">XML schema</a><span class="wb-inv">: Option 2</span></h4>
+      <p> Find the correct XML schema, if you want to create/validate    your .xml file </p>
+    </li>
+</ul>
+
+			
+</li>
+</ol>
             <div id="def-preFooter"></div>
             <!-- Write closure template -->
             <script type="text/javascript">
