--- a/subway/fire/4.html
+++ b/subway/fire/4.html
@@ -186,7 +186,7 @@
 <p>If you file your information return past  the due date you may be charged a penalty. To learn more, see <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/penalties-interest-other-consequences/payroll-penalties-interest.html#late_filinf_info_return">late-filing  penalties for information returns.</a></p>
 </details>
 </li>
-<li><h2>Transfer the files to CRA</h2>
+<li><h2>Transfer the file to CRA</h2>
 <p>Follow the instructions for either:</p>
 <ul>
 <li><a href="4a.html">Filing with Web Forms</a></li>
