--- a/subway/fire/4b.html
+++ b/subway/fire/4b.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Filing with Internet file transfer - File information returns electronically (tax slips and tax summaries) - Canada.ca</title>
+         <title>Filing  with Internet file transfer - File information returns electronically (tax slips and tax summaries) - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -74,20 +74,31 @@
 				   <li><a href="6.html">Contact us</a></li>
                </ul>
             </nav>
-            <h1 property="name" id="wb-cont" class="gc-thickline">Filing with Internet file transfer</h1>
-          <p><a href="https://apps.cra-arc.gc.ca/ebci/leb0/upload/pub/disclaimer.action?request_locale=en">Internet  file transfer</a> allows you to use  payroll, commercial, or in-house developed software, to submit an XML file of  up to 150 MB over the Internet. To use it, an account number and the Web access  code (WAC) associated to this number is required.<br>
-  <strong>IMPORTANT</strong> : An .xml file created with Web Forms or a PDF document saved  as an .xml will NOT pass validations through Internet file transfer.</p>
-<ul>
-  <li><u>Details about XML</u></li>
-  <li><strong>If  you use commercial software</strong>, it will automatically create your .xml  file. Use Internet file transfer to submit your file.</li>
-  <li><strong>If  you do not use commercial software</strong>, the use of the Web Forms is  recommended, otherwise, you have to create your own .xml file.</li>
-  <li><strong>If  you are a software developer and you want to create your own software</strong>,  you need the XML specifications to file an information return. Got to<strong> </strong><a href="https://www.canada.ca/en/revenue-agency/services/e-services/filing-information-returns-electronically-t4-t5-other-types-returns-overview/filing-information-returns-electronically-t4-t5-other-types-returns-what-you-should-know-before.html#xmlspcs">Find XML specifications  to file electronically</a> for  more detail.</li>
-  <li><strong>Download  the CRA schema</strong>; to file information returns in 2023, download  the <a href="https://www.canada.ca/content/dam/cra-arc/serv-info/eservices/xmlschm1-23-1.zip">xmlschm1-23-1</a> file. (version 1-23-1, last updated October 7, 2022)</li>
-</ul>
-<p>After  you save the .zip file on your computer, use an extracting software (for  example WinZip) to extract the .xsd files. You have to extract and save <strong>all  files</strong> to one location on your hard drive.</p>
-<ul>
-  <li>Validate  your file using a validating parser downloaded from the Internet.</li>
-</ul>
+            <h1 property="name" id="wb-cont" class="gc-thickline">Filing  with Internet file transfer</h1>
+          <p> Internet file transfer allows  you to use payroll, commercial, or in-house developed software, to submit an  XML file of up to 150 MB over the Internet.</p>
+		  <h2 class="bg-danger">Steps</h2>
+		  <ol class="lst-stps ld-zr">
+		  <li><h3>Have your XML file ready</h3>
+		  <p>Have your XML file  completed and save as .xml.</p>
+		  <p class="bg-danger">Important considerations:</p>
+		  <ul>
+			<li>If you are using a  commercial software, it will automatically create your .xml file</li>
+			<li><strong><del>IMPORTANT</del></strong> An .xml file created with  Web Forms or a PDF document saved as an .xml will <strong>not</strong> pass validations  through Internet filer transfer</li>
+			</ul>
+		  
+		  
+		  </li>
+ <li><h3>Have your account number and  Web access code (WAC) associated to this number</h3>
+ <p>To use the Internet  file transfer (XML) application, your valid account number and the Web access  code (WAC) associated to this number is required.</p>
+ <p>You can also have  access Internet file transfer (XML) through <a href=https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/business-account.html>My Business Account</a> and <a href=https://www.canada.ca/en/revenue-agency/services/e-services/represent-a-client.html>Represent a Client</a>.</p>
+ </li>
+ <li><h3>Log in the Internet file  transfer (XML) application</h3>
+ <p>You can now browse and  load your .xml file in the Internet file transfer (XML) application to send  your declaration to CRA.<br>
+
+  <a href=https://apps.cra-arc.gc.ca/ebci/leb0/upload/pub/disclaimer.action?request_locale=en" class="btn btn-call-to-action">Start Internet file transfer (XML)</a></p>
+ </li>
+ </ol>
+
 
             <nav class="gc-subway-pagination">
                <h2 class="wb-inv">Document navigation</h2>
